fix: agregar manejador TwoFactorRequiredException y permitir orígenes dinámicos en CORS